compiler/testData/diagnostics/tests/inlineClasses/inlineClassDeprecated.kt
// !LANGUAGE: +JvmInlineValueClasses

<!INLINE_CLASS_DEPRECATED!>inline<!> class IC(val i: Int)
